SCTK Version 2.3-rc2c - Release May 8, 2008
  [+] Check if the character " is not in a RTTM file.
  [/] Changed the sclite compilation flags.

SCTK Version 2.3-rc2b - Release May 6, 2008
  [*] Fixed an asclite bug went more than 32768 segment are added to the structure.
  [/] Changed the asclite compilation flags.

SCTK Version 2.3-rc2 - Release November 26, 2007
  [*] Fixed the exit code, for a fatal error, it exists with a non 0 value.
  [/] Change the error/Info message when filtering.
  [+] Added information in the documentation for asclite regarding the 
      UEM filtering.

SCTK Version 2.3-rc1 - Release September 21, 2007
  [*] Fixed asclite when no input given
  [*] Fixed mapsswe segmentation code 
  [+] Added UEM inplementation directly to asclite
  [+] -wordalign-cost options for asclite adding some cost variance
      depending in the word syntactic distance
  [+] Added Time base cost model trigger with '-time-base-cost' in asclite
  [+] Generic/Rover full implementation in asclite
  [+] Added cumulative table to HTML reports
  [+] Added man and HTML docs for tools
  [/] Changed the speaker auto-overlap behavior from internal to command-
      line options for asclite
  [/] Inter Segment Gaps by default for every file type in asclite
  [/] Update headers disclaimer and file format
  [+] Added rttmValidator
  [+] Added stmValidator
  [+] Added ctmValidator
  
SCTK Version 2.2.4 - Release May 1, 2007
  [+] Added block size and force compression in hubscr.pl
  [+] Added block size limit to 1GB
  [+] Added block computation less aggressive to allow bigger block size
  [*] Fixed linking issue for RTTM and STM files in cause of empty segment
  [*] Fixed display issue with align2html

SCTK Version 2.2.3 - Release April 18, 2007
  [*] Fix the time computation in html report when ISG vs. empty segment
  [/] Fix computation percentage for this table of html display
  [/] Better handling on exceptions to drop segment groups from alignments