@@ -1,5 +1,5 @@
-SCTK Basic Installation for Version 2.3-rc2c
-============================================
+SCTK Basic Installation for Version 2.3
+=======================================
 
 To install compile and install sctk, from the main directory
 type the commands:
