@@ -1,6 +1,6 @@
 File:  README
-Date:  May 8th, 2008
-SCTK Version: 2.3-rc2c
+Date:  September 5th, 2008
+SCTK Version: 2.3
 
 asclite memory usage update.
 
@@ -8,10 +8,10 @@ This directory contains SCTK, the NIST Scoring Toolkit.  SCTK contains
 the source code, documentation and example data for the following
 programs:
 
-	sclite   V2.3 - "Score Lite",
-	sc_stats V1.3 - sclite's Statistical Significance Comparison tool
-	rover    V0.1 - Recognition Output Voting Error Reduction
-	asclite  V1.9 - Multidimensional alignment replacement for sclite
+	sclite   V2.3  - "Score Lite",
+	sc_stats V1.3  - sclite's Statistical Significance Comparison tool
+	rover    V0.1  - Recognition Output Voting Error Reduction
+	asclite  V1.10 - Multidimensional alignment replacement for sclite
 
 The distribution was initially written in ANSI C on a SUN Workstation.  To
 date, The code has been successfully compiled and tested on the
@@ -41,7 +41,7 @@ Darwin Version 7.4.0                          1.3
 Darwin Version 8.5.0 (gcc v4.0.1 build 5367)  2.1.2 2.1.3 2.1.4 2.1.5 2.1.6
                                               2.1.7 2.2.0 2.2.1 2.2.2 2.2.3
                                               2.2.4 2.3-rc1 
-Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 2.3-rc2b 2.3-rc2c
+Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 2.3-rc2b 2.3-rc2c 2.3
 
 	* compiled with warning messages, but successful self test
 	** compiled and ran, but test6, which uses GNU's diff for
