@@ -1,3 +1,7 @@
+SCTK Version 2.3 - Release September 5, 2008
+  [+] Code optimization.
+  [+] Added label and category information in asclite SGML for STM files. 
+
 SCTK Version 2.3-rc2c - Release May 8, 2008
   [+] Check if the character " is not in a RTTM file.
   [/] Changed the sclite compilation flags.
